# Thundercode_Assignment

qa_review/: .env_example  README.md  pyproject.toml  report.md  requirements.txt  streamlit_app.py
qa_review/UI/utilities/: helpers.py
qa_review/outputs/: SEO_report.md  accessibility_report.md  best_practices_report.md  html_report.md  kpis.json  performance_report.md  report.md  security_report.md
qa_review/src/qa_review/: crew.py  main.py
qa_review/src/qa_review/config/: agents.yaml  tasks.yaml
qa_review/src/qa_review/tools/: page_accessibility_tool.py  page_best_practices_tool.py  page_html_tool.py  page_http_header_tool.py  page_performance_tool.py  page_seo_tool.py
