[project]
name = "qa_review"
version = "0.1.0"
description = "QA_Review using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
qa_review = "qa_review.main:run"
run_crew = "qa_review.main:run"
train = "qa_review.main:train"
replay = "qa_review.main:replay"
test = "qa_review.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
